# labs

playground/lab_001_role_confusion/: README.md  main.py  prompts.txt  pyproject.toml
playground/lab_001_role_confusion/llms/: __init__.py  core.py  protected_llm.py  vulnerable_llm.py
playground/lab_001_role_confusion/src/: protected_llm.py
playground/lab_001_role_confusion/static/: index.html  script.js
playground/lab_001_role_confusion/tests/: vulnerable_llm.py
playground/lab_002_instruction_persistence/: .env.example  README.md  main.py  pyproject.toml
playground/lab_002_instruction_persistence/json_chat_histories/: history_user_123_session_123.json
playground/lab_002_instruction_persistence/json_chat_histories_auto_id/: history_957fea82-2795-44b2-bcc2-ec97d3f2b274_5f736fdb-0acd-460d-9204-2d81c808cdfb.json
playground/lab_002_instruction_persistence/json_chat_histories_auto_id_protected/: history_5af70c89-7fc9-4bb6-92e4-27b90039c8b8_11a19472-653b-4269-bb1b-a9c143775912.json  history_6f466977-c772-4ec5-8bf2-085ec0090e31_6fe5724d-474d-4dad-bc78-1fd59f88877b.json
playground/lab_002_instruction_persistence/json_chat_histories_auto_id_vulnerable/: history_85b63111-e978-45f4-86b9-d00b8adc13ec_ff822c2d-70ea-4045-99c5-466ef8b94d89.json
playground/lab_002_instruction_persistence/llms/: protected_llm.py  vulnerable_llm.py
playground/lab_002_instruction_persistence/static/: index.html  script.js  style.css
playground/lab_003_pii_redaction/: .env  api_handlers.py  config.py  custom_loggers.py  error_log.txt  main.py  main.py.bak  pyproject.toml
(+17 files in other folders)
