[project]
name = "lab-002-context-poisoning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-ollama>=0.3.7",
    "python-dotenv>=1.1.1",
    "soteria-sdk>=0.1.2",
]
