[project]
name = "lab-003-pii-redaction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.1.0",
    "fastapi[standard]>=0.118.0",
    "langchain-community>=0.3.30",
    "langchain-core>=0.3.76",
    "pydantic-settings>=2.11.0",
    "soteria-sdk>=0.1.3",
    "websockets>=15.0.1",
    "werkzeug>=3.1.3",
]

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]
